config/objects/Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Customer)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume__c</fullName>
        <label>Monthly Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>CREATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSIGNED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESPONDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>REQUIRE_RESPONSE</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CREATED,ASSIGNED</value>
        </filters>
        <label>REQUIRE RESPONSE</label>
    </listViews>
    <listViews>
        <fullName>RESPONDED_NOT_CLOSED</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>RESPONDED</value>
        </filters>
        <label>RESPONDED, NOT CLOSED</label>
    </listViews>
    <listViews>
        <fullName>UNASSIGNED</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CREATED</value>
        </filters>
        <label>UNASSIGNED</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0}</displayFormat>
        <label>Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>